--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -72,8 +72,8 @@ main section {
 footer {
   background-color: rgb(0, 0, 130);
   height: 30vh;
-  bottom: 0;
   width: 100%;
+  position: absolute;
 }
 section {
   display: flex;
@@ -84,7 +84,7 @@ section {
   margin: auto;
 }
 .somos {
-  background-color: rgb(2, 98, 110);
+  background-color: rgb(235, 255, 207);
   text-align: center;
 }
 main {
@@ -338,4 +338,11 @@ a:hover {
 }
 li.nav-item {
   margin: 5px;
+}
+.mision {
+  height: 40%;
+}
+div h1 {
+  background-color: rgb(0, 0, 130);
+  margin-top: 3px;
 }
