--- a/assets/styles/scss/styles.scss
+++ b/assets/styles/scss/styles.scss
@@ -64,6 +64,7 @@ nav {
   header {
     background-color: rgb(0, 0, 130);
     width: 100vw;
+    text-align: center;
   }
   main section {
     background-color: white;
